<resources>
    <string name="app_name">青年图摘</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_nav_item_category">Category</string>
    <string name="drawer_nav_item_submit_for_publication">Publish</string>
    <string name="drawer_nav_item_account">Account</string>
    <string name="drawer_nav_item_settings">Settings</string>
    <string name="drawer_nav_item_about">About</string>
    <string name="drawer_nav_item_open_source_library">Open Source Library</string>
    <string name="drawer_nav_item_help">Help</string>
    <string name="drawer_nav_item_acknowledgements">Acknowledgements</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">SignUp</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="actvity_login_string_authenticate">Authenticating....</string>
    <string name="actvity_login_string_login_failed">Login failed</string>
    <string name="actvity_login_string_email_adress_input_error">enter a valid email address</string>
    <string name="actvity_login_string_password_input_error">between 4 and 10 alphanumeric characters</string>
    <string name="actvity_signup_string_username_input_error">at least 3 characters</string>
    <string name="actvity_signup_string_email_address_input_error">enter a valid email address</string>
    <string name="actvity_signup_string_password_input_error">between 4 and 10 alphanumeric characters</string>
    <string name="actvity_signup_string_signuping_msg">Creating Account....</string>
    <string name="actvity_signup_string_signup_fail_msg">Login failed</string>
    <string name="actvity_login_xml_link_signup">No account yet? Create one</string>
    <string name="actvity_login_xml_btn_login">Login</string>
    <string name="actvity_login_xml_et_passwd">Password</string>
    <string name="actvity_login_xml_et_email">Email</string>
    <string name="actvity_signup_xml_link_login">Already a member? Login</string>
    <string name="actvity_signup_xml_btn_signup">Create Account</string>
    <string name="actvity_signup_xml_et_passwd">Password</string>
    <string name="actvity_signup_xml_et_email">Email</string>
    <string name="actvity_signup_xml_et_username">Name</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <string name="drawer_nav_item_home">Home</string>
    <string name="activity_setting_action_bar_text">Settings</string>

    <!--以下为设置的参数值-->
    <string-array name="cache_name">
        <item>50MiB</item>
        <item>100MiB</item>
        <item>150MiB</item>
        <item>200MiB</item>
        <item>250MiB</item>
    </string-array>
    <string-array name="cache_value">
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
    </string-array>
    <string name="cache_default_value">50</string>
    <string name="activity_account_info_logout">LogOut</string>
    <string name="nav_header_default_email_text">未登录</string>
    <string name="nav_header_default_username_text">未登录</string>

    <string name="browser_ua">Mozilla/5.0 (Linux U 10.0; Android 5.0;zh-CN; Doublemine Build/2015) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/46.0.2490.86 Safari/537.36</string>
    <string name="pref_clearCache_summary">清空程序占用的存储空间</string>
    <string name="open_source_libraries_list">
        com.android.support:design:23.1.1
\n\nde.hdodenhof:circleimageview:2.0.0
\n\ncom.android.support:cardview-v7:23.1.1
\n\ncom.android.support:recyclerview-v7:23.1.1
\n\ncom.github.bumptech.glide:glide:3.6.1
\n\ncom.github.bumptech.glide:okhttp-integration:1.3.1
\n\npl.droidsonroids.gif:android-gif-drawable:1.1.+
\n\nio.realm:realm-android:0.86.0
\n\ncom.squareup.okhttp:okhttp:2.6.0
\n\ncom.google.code.gson:gson:2.5
\n\ncom.google.android.exoplayer:exoplayer:r1.5.3
    </string>
    <string name="about_help_and_intr">
       每天几篇图摘、几段小视频。希望能够给您一天的好心情。

\n\n数据内容来源于青年图摘的官方网站http://www.qingniantuzhai.com，由于实在不能忍受官方原版的Android App于是有了这个。目前还有很多不完善需要改进的地方，如果你有什么好的意见或者建议，请访问http://notes.xiamo.tk/about给我留言反馈。

\n\n由于本人并不会UI设计，制作这个App一半以上的时间都在纠结UI界面，所以如果你有关于界面方面的意见，请暂时不要吐槽，我实在是不想折腾界面了。



    </string>
</resources>
