<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_logo_register"/>

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/activity_signup_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/actvity_signup_xml_et_username"
                android:textColor="@color/accent"
                android:inputType="textCapWords"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/activity_signup_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/accent"
                android:hint="@string/actvity_signup_xml_et_email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/activity_signup_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/actvity_signup_xml_et_passwd"
                android:textColor="@color/accent"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/activity_signup_btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/actvity_signup_xml_btn_signup"
            android:textColor="@color/accent"/>

        <TextView
            android:id="@+id/activity_signup_link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/actvity_signup_xml_link_login"
            android:textColor="@color/iron"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>