<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    >

    <ImageView android:src="@drawable/ic_logo_login"
               android:layout_width="wrap_content"
               android:layout_height="72dp"
               android:layout_marginBottom="24dp"
               android:layout_gravity="center_horizontal" />

    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/activity_login_input_email"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/accent"
                  android:inputType="textEmailAddress"
                  android:hint="@string/actvity_login_xml_et_email" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/activity_login_input_password"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textPassword"
                  android:textColor="@color/accent"
                  android:hint="@string/actvity_login_xml_et_passwd"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/activity_login_btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/accent"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/actvity_login_xml_btn_login"/>

    <TextView android:id="@+id/activity_login_link_signup"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="24dp"
              android:textColor="@color/iron"
              android:text="@string/actvity_login_xml_link_signup"
              android:gravity="center"
              android:textSize="16dip"/>

</LinearLayout>
</ScrollView>